ADDED: planning for ACF_PACF.utils

--- a/SourceCode/docu/SourceCode/source.html
+++ b/SourceCode/docu/SourceCode/source.html
@@ -25,6 +25,7 @@
             <h2>Submodules</h2>
             <ul>
                     <li><a href="source/STLUtils.html">STLUtils</a></li>
+                    <li><a href="source/StationaryUtils.html">StationaryUtils</a></li>
                     <li><a href="source/UtilsDataFrame.html">UtilsDataFrame</a></li>
                     <li><a href="source/main.html">main</a></li>
             </ul>
