IMPLEMENTED: ARIMAUtls; added more docus

--- a/SourceCode/docu/SourceCode/source.html
+++ b/SourceCode/docu/SourceCode/source.html
@@ -24,6 +24,8 @@
 
             <h2>Submodules</h2>
             <ul>
+                    <li><a href="source/ACF_PACFUtils.html">ACF_PACFUtils</a></li>
+                    <li><a href="source/ARIMAUtils.html">ARIMAUtils</a></li>
                     <li><a href="source/STLUtils.html">STLUtils</a></li>
                     <li><a href="source/StationaryUtils.html">StationaryUtils</a></li>
                     <li><a href="source/UtilsDataFrame.html">UtilsDataFrame</a></li>
