--- a/SourceCode/docu/SourceCode/source.html
+++ b/SourceCode/docu/SourceCode/source.html
@@ -26,10 +26,14 @@
             <ul>
                     <li><a href="source/ACF_PACFUtils.html">ACF_PACFUtils</a></li>
                     <li><a href="source/ARIMAUtils.html">ARIMAUtils</a></li>
+                    <li><a href="source/ModelEvaluation.html">ModelEvaluation</a></li>
+                    <li><a href="source/OutPut.html">OutPut</a></li>
+                    <li><a href="source/OutlierDetectorUtil.html">OutlierDetectorUtil</a></li>
                     <li><a href="source/STLUtils.html">STLUtils</a></li>
                     <li><a href="source/StationaryUtils.html">StationaryUtils</a></li>
                     <li><a href="source/UtilsDataFrame.html">UtilsDataFrame</a></li>
                     <li><a href="source/main.html">main</a></li>
+                    <li><a href="source/run.html">run</a></li>
             </ul>
 
 
