--- a/SourceCode/docu/SourceCode/source/main.html
+++ b/SourceCode/docu/SourceCode/source/main.html
@@ -61,7 +61,7 @@
                     <h1 class="modulename">
 SourceCode<wbr>.<a href="./../source.html">source</a><wbr>.main    </h1>
 
-                        <div class="docstring"><p>A wrapper for run functions </p>
+                        <div class="docstring"><p>A wrapper for the run functions. </p>
 
 <h6 id="this-module-performs-the-following-operations">This module performs the following operations:</h6>
 
@@ -78,7 +78,7 @@ SourceCode<wbr>.<a href="./../source.html">source</a><wbr>.main    </h1>
                         <label class="view-source-button" for="mod-main-view-source"><span>View Source</span></label>
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos"> 1</span></a><span class="sd">&quot;&quot;&quot;</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="sd">A wrapper for run functions </span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos"> 2</span></a><span class="sd">A wrapper for the run functions. </span>
 </span><span id="L-3"><a href="#L-3"><span class="linenos"> 3</span></a><span class="sd">This module performs the following operations:</span>
 </span><span id="L-4"><a href="#L-4"><span class="linenos"> 4</span></a><span class="sd">    1. Extracts the sets</span>
 </span><span id="L-5"><a href="#L-5"><span class="linenos"> 5</span></a><span class="sd">    2. Hands them over to run functions</span>
