--- a/SourceCode/docu/SourceCode/source/ACF_PACFUtils.html
+++ b/SourceCode/docu/SourceCode/source/ACF_PACFUtils.html
@@ -70,7 +70,7 @@
                     <h1 class="modulename">
 SourceCode<wbr>.<a href="./../source.html">source</a><wbr>.ACF_PACFUtils    </h1>
 
-                        <div class="docstring"><p>Provides functions for estimating ARIMA parameters based on the Tran and Reed approach <a href="http://ieeexplore.ieee.org/document/1271185/">http://ieeexplore.ieee.org/document/1271185/</a></p>
+                        <div class="docstring"><p>Provides functions for estimating ARIMA parameters based on the Tran and Reed approach <a href="http://ieeexplore.ieee.org/document/1271185/">http://ieeexplore.ieee.org/document/1271185/</a>.</p>
 </div>
 
                         <input id="mod-ACF_PACFUtils-view-source" class="view-source-toggle-state" type="checkbox" aria-hidden="true" tabindex="-1">
@@ -78,7 +78,7 @@ SourceCode<wbr>.<a href="./../source.html">source</a><wbr>.ACF_PACFUtils    </h1
                         <label class="view-source-button" for="mod-ACF_PACFUtils-view-source"><span>View Source</span></label>
 
                         <div class="pdoc-code codehilite"><pre><span></span><span id="L-1"><a href="#L-1"><span class="linenos">  1</span></a><span class="sd">&quot;&quot;&quot;</span>
-</span><span id="L-2"><a href="#L-2"><span class="linenos">  2</span></a><span class="sd">Provides functions for estimating ARIMA parameters based on the Tran and Reed approach http://ieeexplore.ieee.org/document/1271185/</span>
+</span><span id="L-2"><a href="#L-2"><span class="linenos">  2</span></a><span class="sd">Provides functions for estimating ARIMA parameters based on the Tran and Reed approach http://ieeexplore.ieee.org/document/1271185/.</span>
 </span><span id="L-3"><a href="#L-3"><span class="linenos">  3</span></a><span class="sd">&quot;&quot;&quot;</span>
 </span><span id="L-4"><a href="#L-4"><span class="linenos">  4</span></a>
 </span><span id="L-5"><a href="#L-5"><span class="linenos">  5</span></a>
